[package]
name = "stellar-strkey-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
heapless = { version = "0.9", default-features = false, features = ["zeroize"] }
zeroize = { version = "1", default-features = false }

[dependencies.stellar-strkey]
path = ".."

[dependencies.stellar-strkey-v13]
package = "stellar-strkey"
version = "0.0.13"

[dependencies.stellar-strkey-v16]
package = "stellar-strkey"
version = "0.0.16"

[[bin]]
name = "fuzz_roundtrip"
path = "fuzz_targets/fuzz_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_compare_v13"
path = "fuzz_targets/fuzz_compare_v13.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_compare_v16"
path = "fuzz_targets/fuzz_compare_v16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_compare_zeroizing"
path = "fuzz_targets/fuzz_compare_zeroizing.rs"
test = false
doc = false
bench = false
